<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_timeline"
        android:icon="@drawable/ic_timeline_black_24dp"
        android:title="@string/timeline" />

    <item
        android:id="@+id/nav_market"
        android:icon="@drawable/ic_business_center_black_24dp"
        android:title="@string/market" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account" />

    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/ic_storage_black_24dp"
        android:title="@string/data" />

</menu>
