<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable name="controllers" type="io.github.privacystreams.app.Controllers"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="io.github.privacystreams.app.ManageDataFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dashboardTitle"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/dataDetailList"
            app:layout_constraintTop_toBottomOf="@id/dashboardTitle">

        </LinearLayout>

        <Button
            android:id="@+id/startAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_collecting_all"
            app:layout_constraintTop_toBottomOf="@id/dataDetailList"
            app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="@{() -> controllers.startCollectService()}" />

        <Button
            android:id="@+id/stopAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_collecting_all"
            app:layout_constraintTop_toBottomOf="@id/dataDetailList"
            app:layout_constraintLeft_toRightOf="@id/startAllButton"
            android:onClick="@{() -> controllers.stopCollectService()}" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            app:layout_constraintTop_toBottomOf="@id/dataDetailList"
            app:layout_constraintLeft_toRightOf="@id/stopAllButton"
            android:onClick="@{() -> controllers.test()}" />

    </android.support.constraint.ConstraintLayout>
</layout>
